tests/snapshots/migrated_v1_trace__mv_force_stripped.snap
---
source: tests/migrated_v1_trace.rs
expression: normalised
---

Trace

                                   command │ mv -f a b
                                    parser │ gnu
  83: (rule (command "mv")                 │
        (args                              │
         (if (or (flag "f")                │
                 …)                        │
             (ask                          │ → :ask "Force move is destructive"
              "Force move is destructive") │
           …)))                            │

Result

  mv -f a b

  → :ask "Force move is destructive"

  config: <config-path>
