tests/snapshots/migrated_v1_trace__mv_normal_raw.snap
---
source: tests/migrated_v1_trace.rs
expression: normalised
---

[1mTrace[0m

                              [2mcommand[0m [2m│[0m [1mmv a b[0m
                               [2mparser[0m [2m│[0m gnu
  [2m83: [0m[2m([0m[34mrule[0m [2m([0m[34mcommand[0m [32m"mv"[0m[2m)[0m            [2m│[0m
        [2m([0m[34margs[0m [2m([0m[34mif[0m [2m([0mor [2m([0mflag [32m"f"[0m[2m)[0m      [2m│[0m
                      [2m([0mflag [32m"force"[0m[2m)[0m[2m)[0m [2m│[0m
                  [2m…[0m                   [2m│[0m
                [2m([0mallow[2m)[0m[2m)[0m[2m)[0m[2m)[0m            [2m│[0m [2m[0m[2m→[0m [1;32m:allow[0m

[1mResult[0m

  [4;32mmv a b[0m

  [2m→[0m [1;32m:allow[0m

  config: <config-path>
